--- a/SolucionSistemaPacientes/MvcApplication1/Views/Cita/AgregarCita.cshtml
+++ b/SolucionSistemaPacientes/MvcApplication1/Views/Cita/AgregarCita.cshtml
@@ -146,6 +146,19 @@
                     </div><!-- /.box-body -->
                     </div><!-- /.box -->
             </div><!-- /.colum6 -->
+            <div class="col-md-6">
+                <div class="box box-info">
+                    <div class="box-header with-border">
+                        <h3 class="box-title">Horario de Médico</h3>
+                        <div class="box-tools pull-right">
+                        <button class="btn btn-box-tool btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                        </div>
+                    </div><!-- /.box-header -->
+                    <div class="box-body" id="horario">
+                        
+                    </div><!-- /.box-body -->
+                    </div><!-- /.box -->
+            </div><!-- /.colum6 -->
         </div><!-- /.row -->
     <script type="text/javascript">
 
@@ -158,6 +171,9 @@
 
         function calendarioMedico() {
             $("#calendario").load('@Url.Action("_PartialCalendario", "cita")', {
+                idMedico: $('#medico').val()
+            })
+            $("#horario").load('@Url.Action("_PartialHorario", "cita")', {
                 idMedico: $('#medico').val()
             })
         } 
