--- a/SolucionSistemaPacientes/MvcApplication1/Views/Cita/_PartialCalendarioRegistro.cshtml
+++ b/SolucionSistemaPacientes/MvcApplication1/Views/Cita/_PartialCalendarioRegistro.cshtml
@@ -9,6 +9,16 @@
     }
 </div> 
 
+<div class="col-md-12">
+    @if (@ViewBag.mensajeHora!=null)
+    {
+        <div class="alert alert-danger alert-dismissable">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+            <h4><i class="icon fa fa-check"></i> @ViewBag.mensajeHora</h4>
+        </div>
+    }
+</div> 
+
 <script type="text/javascript">
         var date = new Date();
         
